# chip8

./: CMakeLists.txt  README.md
.github/workflows/: asciidoctor-ghpages.yml
docs/: chip8_emu.adoc  core.adoc  index.adoc  instruction.adoc  opcodes.adoc  operands.adoc  operations.adoc
examples/: CMakeLists.txt
examples/with_sdl/: CMakeLists.txt  main.cpp
include/: show_type.hpp
include/chip8/: chip8.hpp  core.hpp  utils.hpp
include/chip8/details/: instruction.hpp  keyboard.hpp  memory.hpp  opcodes.hpp  operands.hpp  registers.hpp  resources.hpp  sprites.hpp
include/chip8/details/operations/: assign.hpp  bcd.hpp  bitwise.hpp  call.hpp  conditional.hpp  display.hpp  flow.hpp  key_operation.hpp  math.hpp  mem.hpp  rand.hpp  timer.hpp
include/media/: sdl.hpp  window.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/chip8/: core.cpp
test/chip8/details/: instruction.cpp  opcodes.cpp  operands.cpp  operations.cpp  operations.hpp  ops.cpp  ops.hpp
